# webring

./: .gitignore  .golangci.toml  .pre-commit-config.yaml  .prettierrc  404.html  Cargo.toml  Makefile  README.md  default.nix  flake.nix  funcs.go  go.mod  go.sum.license  gomod2nix.toml  grafana.ini  handlers.go  index.html  index.md  justfile  list.txt  main.go  members.txt  package.json  prometheus.yml  renovate.json  rust-toolchain.toml  shell.nix  validation.go  validation_test.go  webring.toml
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  deploy.yml  publish-docs.yml  release.yml  update-flake.yml
ci/: update-flake-lock.sh
ci/ssh/: config  known_hosts
ci/vulcan/: build-for-ci.sh  build.sh  cleanup.sh  deploy.sh  home.nix  launch.sh  test.sh
doc/: Configuration.md
docs/: Configuration.md
src/: checking.rs  config.rs  discord.rs  homepage.rs  main.rs  members.rs  render_homepage.rs  routes.rs  stats.rs  webring.rs
src/stats/: mod.rs  parquet_encoding.rs
src/templates/: error.css  error.html  flip.html
static/: index.html  index.js  style.css
