[package]
name = "ph-webring"
version = "0.0.0"
description = "Purdue Hackers' webring server"
repository = "https://github.com/purduehackers/webring"
homepage = "https://ring.purduehackers.com"
authors = [
    "Kian Kasad <kian@kasad.com>",
    "Henry Rovnyak <h.rovnyak@proton.me>",
]

edition = "2024"

# Enable clippy's pedantic group
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Slice indexing can always panic. Why only warn in match blocks?
match-on-vec-items = "allow"

[dependencies]
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.38", features = ["derive"] }
eyre = "0.6.12"
ftail = "0.3.0"
futures = "0.3.31"
html-escape = "0.2.13"
indexmap = { version = "2.9.0", features = ["serde"] }
log = { version = "0.4.27", features = ["serde"] }
lol_html = "2.4.0"
notify = "8.0.0"
papaya = { version = "0.2.1", features = ["serde"] }
rand = "0.9.1"
reqwest = { version = "0.12.15", features = ["stream", "json"] }
same-file = "1.0.6"
sarlacc = "0.1.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
surge-ping = "0.8.2"
tera = "1.20.0"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.15", features = ["io"] }
toml = { version = "0.8.22", features = ["preserve_order"] }
tower-http = { version = "0.6.4", features = ["cors", "fs", "catch-panic"] }

[dev-dependencies]
http-body-util = "0.1.3"
indoc = "2.0.6"
pretty_assertions = "1.4.1"
tempfile = "3.20.0"
tower = "0.5.2"
