[package]
name = "ph-webring"
version = "0.0.0"
description = "Purdue Hackers' webring server"
repository = "https://github.com/purduehackers/webring"
homepage = "https://ring.purduehackers.com"
authors = [
    "Kian Kasad <kian@kasad.com>",
    "Henry Rovnyak <h.rovnyak@proton.me>",
]

edition = "2024"

# Enable clippy's pedantic group
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Slice indexing can always panic. Why only warn in match blocks?
match-on-vec-items = "allow"
missing-docs-in-private-items = "warn"

[dependencies]
axum = { version = "0.8.4", default-features = false, features = [ "http1", "http2", "tokio", "tracing", "query" ] }
chrono = { version = "0.4.41", default-features = false, features = [ "serde", "now" ] }
clap = { version = "4.5.40", features = ["derive"] }
eyre = "0.6.12"
ftail = "0.3.0"
futures = { version = "0.3.31", default-features = false, features = [ "alloc" ] }
html-escape = { version = "0.2.13", default-features = false }
indexmap = { version = "2.10.0", default-features = false, features = ["serde"] }
indoc = "2.0.6"
log = { version = "0.4.27", features = ["serde"] }
lol_html = "2.4.0"
notify = "8.0.0"
papaya = { version = "0.2.3", features = ["serde"] }
rand = { version = "0.9.1", default-features = false, features = [ "thread_rng" ]}
reqwest = { version = "0.12.15", features = ["stream", "json"] }
same-file = "1.0.6"
sarlacc = "0.1.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tera = { version = "1.20.0", default-features = false, features = [ "urlencode" ] }
thiserror = { version = "2.0.12", default-features = false }
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
toml = { version = "0.8.22", default-features = false, features = ["preserve_order", "parse"] }
tower-http = { version = "0.6.6", features = ["cors", "fs", "catch-panic"] }

[dev-dependencies]
http-body-util = "0.1.3"
pretty_assertions = "1.4.1"
tempfile = "3.20.0"
tower = "0.5.2"
