# Copyright (C) 2025 Kian Kasad and Henry Rovnyak
#
# This file is part of the Purdue Hackers webring.
#
# The Purdue Hackers webring is free software: you can redistribute it and/or
# modify it under the terms of the GNU Affero General Public License as
# published by the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# The Purdue Hackers webring is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
# or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Affero General Public License
# for more details.
#
# You should have received a copy of the GNU Affero General Public License along
# with the Purdue Hackers webring. If not, see <https://www.gnu.org/licenses/>.

[package]
name = "ph-webring"
version = "0.0.0"
description = "Purdue Hackers' webring server"
repository = "https://github.com/purduehackers/webring"
homepage = "https://ring.purduehackers.com"
authors = [
    "Kian Kasad <kian@kasad.com>",
    "Henry Rovnyak <h.rovnyak@proton.me>",
]

edition = "2024"

# Enable clippy's pedantic group
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Slice indexing can always panic. Why only warn in match blocks?
missing-docs-in-private-items = "warn"

[dependencies]
axum = { version = "0.8.4", default-features = false, features = [ "http1", "http2", "tokio", "tracing", "query" ] }
chrono = { version = "0.4.41", default-features = false, features = [ "serde", "now" ] }
clap = { version = "4.5.41", features = ["derive"] }
eyre = "0.6.12"
futures = { version = "0.3.31", default-features = false, features = [ "alloc" ] }
html-escape = { version = "0.2.13", default-features = false }
indexmap = { version = "2.10.0", default-features = false, features = ["serde"] }
indoc = "2.0.6"
lol_html = "2.6.0"
notify = "8.2.0"
papaya = { version = "0.2.3", features = ["serde"] }
rand = { version = "0.9.2", default-features = false, features = [ "thread_rng" ]}
reqwest = { version = "0.13.0", features = ["stream", "json", "query"] }
same-file = "1.0.6"
sarlacc = "0.1.4"
sentry = { version = "0.46.1", features = ["tower-axum-matched-path"] }
# sarlacc = { path = "../sarlacc" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tera = { version = "1.20.0", default-features = false, features = [ "urlencode" ] }
thiserror = { version = "2.0.12", default-features = false }
tokio = { version = "1.47.0", features = ["macros", "rt-multi-thread"] }
toml = { version = "1.0.0", default-features = false, features = ["preserve_order", "parse", "serde", "std"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "fs", "catch-panic", "trace"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["tracing-log"] }

[dev-dependencies]
http-body-util = "0.1.3"
httpmock = { version = "0.8.0", default-features = false }
pretty_assertions = "1.4.1"
tempfile = "3.20.0"
tower = "0.5.2"
tokio = { version = "1.47.0", features = ["macros", "rt-multi-thread", "test-util"] }
